--- a/src/Advice.scss
+++ b/src/Advice.scss
@@ -13,6 +13,11 @@
     align-items: center;
     justify-content: space-around;
     gap: 0.5em;
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 
     &__number {
         color: $neon-green;
@@ -26,6 +31,11 @@
         font-size: 20px;
         letter-spacing: 0.05em;
         text-align: center;
+        -webkit-user-select: text;
+        -webkit-touch-ctextout: text;
+        -moz-user-select: text;
+        -ms-user-select: text;
+        user-select: text;
     }
 
     &__dice {
@@ -33,6 +43,11 @@
         width: 100%;
         display: flex;
         justify-content: center;
+    }
+
+    &__dice div:hover {
+        box-shadow: 0 0 30px 5px $neon-green;
+        cursor: pointer;
     }
 
     &__dice div {
@@ -46,3 +61,22 @@
     }
 }
 
+@media only screen and (min-width: 600px) {
+    .advice {
+        width: 530px;
+        height: 325px;
+        border-radius: 0.8em;
+
+        &__number {
+            padding-block-start: 1em;
+            letter-spacing: 0.2em;
+            font-size: 14px;
+        }
+
+        &__quote {
+            font-size: 28px;
+            letter-spacing: 0.05em;
+        }
+
+    }
+  }
